# python

./: .gitignore  bun.lockb  cmd.ts  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  todo.md  try.ts  tsconfig.json
scripts/: cleanup-htmls.py
src/: main.py  strip_html.py
try/: alexnet.py  main.py  transformer-neural-net.py
utils/: Financial-Analysis-Agent_state.json  pyproject.toml  readme.md
utils/.flox/: env.json
utils/.flox/env/: manifest.toml
utils/utils/: swarms-agents.py
